# moon

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StaticAnalysis.cmake
include/moon/: fs.h  span.h
moon/: CMakeLists.txt
nix/: CMakeLists.txt
nix/include/nix/: core.h  fs.h
nix/src/: core.cpp  fs.cpp
src/: CMakeLists.txt  fs.cpp
tests/: CMakeLists.txt  test_fs.cpp  test_span.cpp
